--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"axios": "^1.4.0",
 		"date-fns": "^2.30.0",
 		"dayjs": "^1.11.9",
+		"focus-trap-react": "^10.2.1",
 		"react-day-picker": "^8.8.0",
 		"react-dom": "^18.2.0"
 	},
