--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --host",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
@@ -12,7 +12,10 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
-		"@mui/material": "^5.14.3",
+		"@fontsource/inter": "^5.0.8",
+		"@fontsource/roboto": "^5.0.8",
+		"@mui/icons-material": "^5.14.9",
+		"@mui/material": "^5.14.8",
 		"@mui/x-date-pickers": "^6.10.2",
 		"axios": "^1.4.0",
 		"date-fns": "^2.30.0",
