--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@fontsource/inter": "^5.0.8",
 		"@fontsource/roboto": "^5.0.8",
 		"@mui/icons-material": "^5.14.9",
+		"@mui/lab": "^5.0.0-alpha.144",
 		"@mui/material": "^5.14.8",
 		"@mui/x-date-pickers": "^6.10.2",
 		"axios": "^1.4.0",
