--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@fontsource/inter": "^5.0.8",
 		"@fontsource/roboto": "^5.0.8",
+		"@hookform/resolvers": "^3.3.1",
 		"@mui/icons-material": "^5.14.9",
 		"@mui/lab": "^5.0.0-alpha.144",
 		"@mui/material": "^5.14.8",
@@ -24,7 +25,9 @@
 		"focus-trap-react": "^10.2.1",
 		"react-day-picker": "^8.8.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.15.0"
+		"react-hook-form": "^7.46.2",
+		"react-router-dom": "^6.15.0",
+		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20.4.10",
